Use fast nvmee cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /usr/users/burg:/usr/users/burg
       - /usr/users/agecker:/usr/users/agecker
       - /user/burg/data:/data
+      - /user/burg/.cache:/home/burg/.cache
     env_file: /usr/users/burg/.env
     runtime: nvidia
     environment:
@@ -39,6 +40,7 @@ services:
       - /usr/users/burg:/usr/users/burg
       - /usr/users/agecker:/usr/users/agecker
       - /user/burg/data:/data
+      - /user/burg/.cache:/home/burg/.cache
     env_file: /usr/users/burg/.env
     environment:
       - DISPLAY=$DISPLAY
